# M2_Internship_Supplementary

./: .gitignore  LICENSE  README.md  Variable Gene Selection (GSE122466 Retina).ipynb  Variable Gene Selection (GSE156234 Macrophages).ipynb  Variable Gene Selection (GSE81682 Hematopoiesis).ipynb  from_spec.py  pyproject.toml  zero_inf_diagnostics.ipynb
bn_synthesis0/: __init__.py  api.py  domains.py  inference.py  statistics.py  theorems.py  trajectories.py
bn_synthesis0/utils/: bonesis_helpers.py  formatting.py  managers.py  plotting.py
