[tool.poetry]
name = "bn-synthesis"
version = "0.1.0"
description = "Synthetic boolean networks from dynamical constraints"
authors = ["Gustavo Magaña López <28574085+gmagannaDevelop@users.noreply.github.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
bn2vec = "^1.0.0" # should remove it
pandas = "^1.4.1"
scipy = "^1.8.1"
scikit-learn = "^1.0.2"
networkx = "2.6.3" # important!
# if networkx > 2.6.3, ipython cannot display
# bonesis influence graphs !

# bonesis, install with:
# $ git clone https://github.com/gmagannaDevelop/bonesis
# $ cd bonesis/
# $ pip install -e .

# scboolseq, using my local dev. directory
# $ git clone https://github.com/bnediction/scBoolSeq
# $ cd scBoolSeq
# $ pip install -e .

# colomoto-jupyter:
# $ git clone https://github.com/colomoto/colomoto-jupyter
# $ cd colomoto-jupyter
# $ pip install -e .
toml = "^0.10.2"
plotnine = "^0.8.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.14.1"
jupyter = "^1.0.0"
pytest = "^7.1.2"
ipywidgets = "^7.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
